# potato-classifier

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  threadpool.hpp  threadsafequeue.hpp
