cmake_minimum_required(VERSION 3.5)

project(potato-classifier)

option(PROFILE "Profile using gperf" OFF)

set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
#set(CMAKE_AUTORCC ON)
set(CMAKE_INCLUDE_CURRENT_DIR ON)
include(CheckCXXCompilerFlag)
CHECK_CXX_COMPILER_FLAG("-march=native" COMPILER_OPT_ARCH_NATIVE_SUPPORTED)
if (COMPILER_OPT_ARCH_NATIVE_SUPPORTED)
    set(CXXFLAGS "-march=native")
endif()

if(EXISTS /usr/local/include/ddsl/ddsl.hpp)
    message("-- Found ddsl in /usr/local/include/ddsl")
    include_directories(SYSTEM "/usr/local/include/ddsl" "/usr/local/include/ddsl/libsvm")
elseif(EXISTS /usr/include/ddsl/ddsl.hpp)
    message("-- Found ddsl in /usr/include/ddsl")
    include_directories(SYSTEM "/usr/include/ddsl" "/usr/local/ddsl/libsvm")
else()
    #ERROR
endif()
if(EXISTS /usr/local/include/caffe/caffe.hpp)
    include_directories(SYSTEM "/usr/local/include/caffe")
elseif(EXISTS /usr/include/caffe/caffe.hpp)
    include_directories(SYSTEM "/usr/include/caffe")
else()
    #ERROR
endif()

if(CPU_ONLY)
    message("-- Building without GPU support")
    add_definitions(-DCPU_ONLY)
endif()
if(USE_NCCL)
    message("-- Building with multiple GPU support")
    add_definitions(-DUSE_NCCL)
endif()

find_package(Qt5 COMPONENTS Core Widgets REQUIRED)
find_package(Caffe REQUIRED)

set(SRC "main.cpp" "mainwindow.cpp" "mainwindow.ui")
set(HEADERS "mainwindow.h")
add_executable(${PROJECT_NAME} ${SRC} ${HEADERS})

set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 14)
set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD_REQUIRED ON)
if(PROFILE)
    set(PROFILER "profiler")
    set_property(TARGET ${PROJECT_NAME} PROPERTY LINK_FLAGS "-Wl,-O1,--sort-common,-z,relro")
else()
    set_property(TARGET ${PROJECT_NAME} PROPERTY LINK_FLAGS "-Wl,-O1,--sort-common,--as-needed,-z,relro")
endif()

if(UNIX OR MINGW)
    set(CMAKE_CXX_FLAGS "${OpenMP_CXX_FLAGS} -march=native -pipe -Wall -Wpedantic -Werror")
    set(CMAKE_CXX_FLAGS_DEBUG "-g -Og -fvar-tracking-assignments")
    set(CMAKE_CXX_FLAGS_RELEASE "-O3")
elseif(WIN32)
    set(CMAKE_CXX_FLAGS "${OpenMP_CXX_FLAGS} /march=native /pipe /Wall /Wpedantic /Werror")
    set(CMAKE_CXX_FLAGS_DEBUG "/g /Og /fvar-tracking-assignments")
    set(CMAKE_CXX_FLAGS_RELEASE "/O3")
endif()
set(EXTERNAL_LIBS png)
set(DDSL_LIBS af_ddsl png_ddsl svm_ddsl)
find_library(LOG4CXX_LIBRARIES log4cxx)
install(TARGETS ${PROJECT_NAME} DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
message("-- Setting install root to ${CMAKE_INSTALL_PREFIX}")
target_link_libraries(${PROJECT_NAME} Qt5::Core Qt5::Widgets profiler ${DDSL_LIBS} ${EXTERNAL_LIBS} ${PROFILER} ${LOG4CXX_LIBRARIES} ${Caffe_LIBRARIES})
